# DXMathKit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DXMathKit/: DXMMatrix.h  DXMMatrix.mm  DXMathConv.h  DXMathKit.h  DXMathKit.mm
DXMathKit.xcodeproj/: project.pbxproj
DXMathKit/DXMathKit.docc/: DXMathKit.md
DXMathKitTests/: DXMathKitTests.swift
